# simple-daw

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build-dev.bat  run-tests.bat
docs/: audio-underrun-investigation.md  daw-architecture.md  juce-pinning.md  learning-plan-juce-dsp.md  learning-plan-week-0-2-3.md
src/: Main.cpp
src/audio/: AudioTrackSource.cpp  AudioTrackSource.h  Recorder.cpp  Recorder.h
src/midi/: DemoSound.cpp  DemoSound.h  MidiClip.cpp  MidiClip.h  MidiNote.h  MidiOutputRouter.h  MidiTrack.cpp  MidiTrack.h  SineVoice.cpp  SineVoice.h  SynthAudioSource.cpp  SynthAudioSource.h
src/plugin/: PluginHost.cpp  PluginHost.h  PluginWindows.h
src/session/: SessionIO.cpp  SessionIO.h
src/tracks/: AudioTrack.cpp  AudioTrack.h  TrackRow.cpp  TrackRow.h  TracksViewport.cpp  TracksViewport.h
src/ui/: PeakMeterComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  SettingsWindow.h  TrackMeterComponent.h  TransportBar.cpp  TransportBar.h
tests/: MidiClipTests.cpp  MidiOutputRouterTests.cpp
